# ckg-mcp

./: .gitignore  README.md  index.html  llms.txt  pyproject.toml  render.yaml  server.json  smithery.yaml  stripe-setup.js  vercel.json
docs/: carousel.html  index.html
examples/: langchain_rag_comparison.py  live_demo.py
scripts/: build_pro_graphs_json.py
src/ckg_mcp/: graph.py  serve.py  server.py
src/ckg_mcp/agents/: context-as-a-service-advisor.json  gpu-inference-optimizer.json
src/ckg_mcp/domains/: agent-reliability.csv  agentforce-developer.csv  agentforce-vibes.csv  ai-governance.csv  aml-kyc-chain.csv  apache-iceberg.csv  art-of-war.csv  asl-book.csv  aws-data-catalog.csv  azure-purview.csv  biology.csv  calculus.csv  claude-anthropic.csv  clinical-decision-chain.csv  context-as-a-service.csv  contract-law-elements.csv  cpt-em-coding.csv  cursor.csv  data-cloud.csv  databricks-unity.csv  dbt-core.csv  deepseek.csv  drug-interactions.csv  einstein-trust-layer.csv  fda-adverse-event-chain.csv  fda-drug-approval-chain.csv  federal-procurement-chain.csv  fft-benchmarking.csv  gao-oversight-chain.csv  gemini-api.csv  glm-zhipu.csv  glp1-muscle-loss.csv  glp1-obesity.csv  google-dataplex.csv  grok-xai.csv  hipaa-ai.csv  hipaa-compliance.csv  icd10-metabolic.csv  investment-risk-chain.csv  kimi-moonshot.csv  (+22 more)
