[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ckg-mcp"
version = "0.7.9"
description = "Context optimization for AI agents — 97 domain knowledge graphs (68 free + 29 Pro), MCP-native traversal. 4× F1 of RAG, 11× fewer tokens per query. Works with Claude, GPT-4o, Gemini, and any MCP client."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Daniel Yarmoluk", email = "daniel.yarmoluk@gmail.com" }]
keywords = ["mcp", "knowledge-graph", "rag", "llm", "ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.optional-dependencies]
serve = ["starlette", "uvicorn", "httpx"]

[project.scripts]
ckg-mcp = "ckg_mcp.server:main"
ckg-mcp-serve = "ckg_mcp.serve:main"

[project.urls]
Homepage = "https://graphifymd.com"
Repository = "https://github.com/Yarmoluk/ckg-mcp"
Paper = "https://graphifymd.com/paper.html"

[tool.hatch.build.targets.wheel]
packages = ["src/ckg_mcp"]
